[Utility] 添加MCToast pod库

--- a/SwiftStudy/Podfile
+++ b/SwiftStudy/Podfile
@@ -14,7 +14,9 @@ target 'SwiftStudy' do
   pod 'Alamofire'
   pod 'FLAnimatedImage'
   pod 'SDWebImage'
-  pod "ESPullToRefresh"
+  pod 'ESPullToRefresh'
+  # 添加Toast
+  pod 'MCToast'
   
   # APP启动引导页,支持播放gif/png/jpg等类型的资源数组
 #  pod 'GuidePageView'
